--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">2018011508</string>
     <string name="title_activity_main">Main</string>
+    <string name="title_activity_camera">CameraActivity</string>
 </resources>
